sphere tracing viz, paper work

--- a/paper/DAFx20_Templates_LaTeX/DAFx20_tmpl.tex
+++ b/paper/DAFx20_Templates_LaTeX/DAFx20_tmpl.tex
@@ -160,8 +160,8 @@
 % -------------SINGLE-AFFILIATION SINGLE-AUTHOR HEADER STARTS (uncomment below if your paper has a single author)----------------------------------------
 \affiliation{
 \paperauthorA\,\sthanks{Thanks to the predecessors for the templates}}
-{\href{https://www.mdw.ac.at/ike/}{Institute 1} \\ University of Music and Performing Arts\\ Vienna, Austria\\
-{\tt \href{mailto:dafx2020@gmail.com}{dafx2020@gmail.com}}
+{\href{https://www.mdw.ac.at/ike/}{Institute 1} \\ University of Applied Sciences St.Poelten\\ St.Poelten, Austria\\
+{\tt \href{mailto:dafx2020@gmail.com}{ptrk.lechner@gmail.com}}
 }
 %-------------SINGLE-AFFILIATION SINGLE-AUTHOR HEADER ENDS-------------------------------------------------------------------------------------------------------------------
 
@@ -258,20 +258,77 @@
 
 \begin{abstract}
 
-This is the template file for the proceedings of the 23$^{\text{rd}}$ International Conference on Digital Audio Effects (DAFx-20).
-This template has been derived from WASPAA'99 templates and aims at producing conference proceedings in electronic form.
-The format is essentially the one used for ICASSP conferences.
-Please use either this \LaTeX{} or the accompanying Word formats when preparing your submission.
-The templates are available in electronic form on
-\href{https://dafx2020.mdw.ac.at/}{https://dafx2020.mdw.ac.at/}.
+Several algorithms and approaches for Room Impulse Response (RIR) estimation exist. To the best of the authors knowledge, there is no documentation of accuracy, speed or even the feasibility of using signed distance functions (SDFs) in combination with sphere tracing for this task. Here a proof of concept with a focus or real time performance is presented, that lacks many features such as frequency dependent absorption and scattering coefficients, arbitrary source and receiver directives etc. The results are shown and compared to real room impulse responses recorded by \cite{brinkmann_round_2019}. The implementation happens mostly inside a compute shader, an example application is provided in the framework \texttt{TouchDesigner}. 
+The application as well as all generated data and \texttt{Jupyter Notebooks} can be found on \href{https://github.com/hrtlacek/rayMarchReverb}{https://github.com/hrtlacek/rayMarchReverb}.
 \end{abstract}
 
 \section{Introduction}
 \label{sec:intro}
-This template can be found on the conference website.
+Sphere tracing \cite{hart_sphere_1996} is extensively in the so called "demo scene" to render impressive 3D video demos via shaders in real time for decades. 
+As a version of ray tracing that relies on the geometry being defined as so called signed distance functions (SDFs), it does not directly support the import of standard 3D Polygonal geometry. One of the advantages lies in the algorithm's potential improved speed in comparison to fixed-step ray tracing. SDFs describe implicit surfaces, via a function $f : \mathbb{R}^3 \rightarrow \mathbb{R}$. A function returns a negative value if the locus of the point is inside the geometry, a positive value if outside and 0 if on the surface. If defined carefully, the distance to the nearest surface is always known as the full geometry of the scene describes an ideally lipschitz continuous distance field in $\mathbb{R}^3$. 
+%
+\begin{figure}
+    \begin{center}
+      \input{img/sdf2d}
+        % \input{img/mytikz.tex}
+    \end{center}
+    \caption{a two dimensional SDF. $F(x,y) = \sqrt{x^2+y^2} - 1$} describes the unit circle.
+\end{figure}
 
-\subsection{Figures}
-\label{ssec:figures}
+Since the distance to the nearest surface is always known, the step size of a ray tracing algorithm can be dynamically adjusted, resulting in fewer iterations along a ray, see figure
+
+% This enables the technique of sphere tracing, which has been used extensively in the so called demo scene to render impressive 3D video demos in real time for decades. 
+
+
+% \begin{figure}[ht]
+% \centerline{\includegraphics[scale=0.8]{fft_plot2}}
+% \caption{\label{fft_plot}{\it Sinusoid in time and frequency domain. Short captions are centred, long captions (more than 1 line) are justified.}}
+% \end{figure}
+
+
+\subsection{Previous Work}
+\label{ssec:prev}
+
+As shown in \cite{brinkmann_round_2019} there exist multiple approaches for estimating RIRs.  
+NVIDIA is working in the field of real time ray traced audio simulation
+NVIDIA VRWorks™ Audio (introduced with the Pascal GPU architecture) 
+
+\cite{cao_interactive_2016} bidirectional raytracing.
+
+\subsubsection*{RIR Estimation}
+image sourcce method, wave based, raytracing.
+
+
+\subsubsection*{Sphere Tracing}
+
+Defining SDFs is an active field of research and there are several projects that aim at easier construction of SDFs and integration in 3D frameworks such as \href{https://github.com/Flafla2/Generic-Raymarch-Unity}{https://github.com/Flafla2/Generic-Raymarch-Unity} and \cite{lechner_hrtlacektdraymarchtoolkit_2020}.
+
+
+
+\subsection{Motivation}
+The reasons why sphere tracing in a compute shader for RIR estimation has not been documented until now probably lie in the relatively new introduction of compute shaders as well as in the difficulty of creating SDFs(in comparison to using existing 3D /CAD models and import them to polygon based ray tracers).
+\subsubsection{Sphere tracing}
+As described above, ray tracing in general is in use.
+procedural by default
+deforming geometry
+\subsubsection{Implementation}
+It is possible to implement the chosen algorithm on the CPU and the GPU. A number of frameworks could be chosen for GPU accelerated computation such as OpenCL or NVIDIA CUDA. The choice of a shader has the advantage of being more operating system independent and hardware independent. Compute shaders (in contrast to fragment shaders) make it possible to write to arbitrary output locations which is necessary for generating the actual impulse response from the measurement of timings. Since they are available since OpenGL 4.3 (August 2012) / OpenGL ES 3.1 they are both old enough have received broad support in other frameworks and relatively new in respect to first publications about sphere tracing. Another reason for the choice of compute shaders is their simplicity. In comparison to CUDA and OpenCL, shaders are easier to write and the GLSL(Graphics Library Shading Language) is more widespread. 
+
+
+\section{Generation of SDFs}
+
+\section{Sphere Tracing}
+For simplicity, deterministic equal-angle Ray Tracing is used in contrast to Monte Carlo or Equal Area Ray tracing (EART) \cite{gu_room_2014}.
+
+low frequency pass
+
+\section{Generation of impulse response}
+
+Advantage of compute shader.
+Maybe introduce cascaded Lowpass.
+
+
+
 All figures should be centred on the column (or page, if the figure spans both columns).
 Figure captions (in italic) should follow each figure and have the format given in Figure \ref{fft_plot}.
 %
@@ -284,6 +341,13 @@ If bitmap figures are used, please make sure that the resolution is
 enough for print quality. Fig. \ref{ftt_plot2} illustrates an
 example of a figure spanning two columns.
 %
+
+\section{Results}
+
+compare to \cite{brinkmann_round_2019}
+compare to \cite{campbell_roomsim_nodate}
+
+
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.8]{fft_plot2}}
 \caption{\label{fft_plot}{\it Sinusoid in time and frequency domain. Short captions are centred, long captions (more than 1 line) are justified.}}
@@ -292,7 +356,7 @@ example of a figure spanning two columns.
 \begin{figure*}[ht]
 \center
 \includegraphics[width=5in]{TwoColumnSine2}
-\caption{\label{ftt_plot2}{\it A figure spanning two columns, as mentioned in Sec. \ref{ssec:figures}. }}
+\caption{\label{ftt_plot2}{\it A figure spanning two columns, as mentioned in Sec. . }}
 \end{figure*}
 
 
@@ -367,7 +431,7 @@ that is, the first page will start at page DAFX-1 and the last page, at most, wi
 
 
 \subsection{References}
-The references will be numbered in order of appearance \cite{Mitra:Kaiser:1993:DSP:handbook}, \cite{Haykin:1991:adaptive:filter}, \cite{Moorer:2000:AES:audio:millenium} and \cite{Nackaerts:2001:ICMC}. Please avoid listing references that do not appear in the text (we did the opposite in this template).
+% The references will be numbered in order of appearance \cite{Mitra:Kaiser:1993:DSP:handbook}, \cite{Haykin:1991:adaptive:filter}, \cite{Moorer:2000:AES:audio:millenium} and \cite{Nackaerts:2001:ICMC}. Please avoid listing references that do not appear in the text (we did the opposite in this template).
 
 
 \subsubsection{Reference Format}
@@ -387,7 +451,9 @@ Many thanks to the great number of anonymous reviewers!
 %\newpage
 \nocite{*}
 \bibliographystyle{IEEEbib}
-\bibliography{DAFx20_tmpl} % requires file DAFx20_tmpl.bib
+% \bibliography{DAFx20_tmpl} % requires file DAFx20_tmpl.bib
+\bibliography{RaymarchReverb2}
+
 
 \section{Appendix: Margin Check}
 This section shows the column margins for the text. \bigskip\newline
