--- a/paper/DAFx20_Templates_LaTeX/DAFx20_tmpl.tex
+++ b/paper/DAFx20_Templates_LaTeX/DAFx20_tmpl.tex
@@ -261,7 +261,7 @@
 \begin{abstract}
 
 Several algorithms and approaches for Room Impulse Response (RIR) estimation exist. To the best of the authors knowledge, there is no documentation of accuracy, speed or even the feasibility of using signed distance functions (SDFs) in combination with sphere tracing for this task. Here a proof of concept with a focus or real time performance is presented, that lacks many features such as frequency dependent absorption and scattering coefficients, arbitrary source and receiver directives etc. The results are shown and compared to real room impulse responses recorded by \cite{brinkmann_round_2019}. The implementation happens mostly inside a compute shader, an example application is provided in the framework \texttt{TouchDesigner}. 
-The application as well as all generated data and \texttt{Jupyter Notebooks} can be found on \href{https://github.com/hrtlacek/rayMarchReverb}{https://github.com/hrtlacek/rayMarchReverb}.
+The application as well as all generated data and \texttt{Jupyter Notebooks} can be found on this project's github repository at \href{https://github.com/hrtlacek/rayMarchReverb}{https://github.com/hrtlacek/rayMarchReverb}.
 \end{abstract}
 
 \section{Introduction}
@@ -269,15 +269,31 @@ The application as well as all generated data and \texttt{Jupyter Notebooks} can
 Sphere tracing \cite{hart_sphere_1996} is extensively in the so called "demo scene" to render impressive 3D video demos via shaders in real time for decades. 
 As a version of ray tracing that relies on the geometry being defined as so called signed distance functions (SDFs), it does not directly support the import of standard 3D Polygonal geometry. One of the advantages lies in the algorithm's potential improved speed in comparison to fixed-step ray tracing. SDFs describe implicit surfaces, via a function $f : \mathbb{R}^3 \rightarrow \mathbb{R}$. A function returns a negative value if the locus of the point is inside the geometry, a positive value if outside and 0 if on the surface. If defined carefully, the distance to the nearest surface is always known as the full geometry of the scene describes an ideally lipschitz continuous distance field in $\mathbb{R}^3$. 
 %
-\begin{figure}
-    \begin{center}
-      \input{img/sdf2d}
-        % \input{img/mytikz.tex}
-    \end{center}
-    \caption{a two dimensional SDF. $F(x,y) = \sqrt{x^2+y^2} - 1$} describes the unit circle.
-\end{figure}
+% \begin{figure}
+%     \begin{center}
+%       \input{img/sdf2d}
+%         % \input{img/mytikz.tex}
+%     \end{center}
+%     \caption{a two dimensional SDF. $F(x,y) = \sqrt{x^2+y^2} - 1$} describes the unit circle.
+% \end{figure}
 
-Since the distance to the nearest surface is always known, the step size of a ray tracing algorithm can be dynamically adjusted, resulting in fewer iterations along a ray, see figure
+Since the distance to the nearest surface is always known, the step size of a ray tracing algorithm can be dynamically adjusted, resulting in fewer iterations along a ray, see Figure \ref{sphereViz}..
+
+
+
+\begin{figure}[ht]
+\centerline{\includegraphics[scale=0.5]{img/sphereTracingViz.png}}
+\caption{\label{sphereViz}{\it Visualization of the sphere tracing algorithm in 2D. A ray is sent from the source (left) the right until it hits a surface, always moving the maximum distance as the SDF informs the tracing algorithm about the distance to nearest surface.}}
+\end{figure}
+%
+
+% \begin{figure}
+%     \begin{center}
+%         \input{img/sphereTracingViz.pgf}
+%     \end{center}
+%     \caption{A PGF histogram from \texttt{matplotlib}.}
+% \end{figure}
+
 
 % This enables the technique of sphere tracing, which has been used extensively in the so called demo scene to render impressive 3D video demos in real time for decades. 
 
@@ -291,7 +307,7 @@ Since the distance to the nearest surface is always known, the step size of a ra
 \subsection{Previous Work}
 \label{ssec:prev}
 A lot of previous work exists both in the field of Ray/sphere tracing and RIR estimation.
-As shown in \cite{brinkmann_round_2019} there exist multiple approaches for estimating RIRs. 
+As shown in \cite{alpkocak_computing_2010} and \cite{brinkmann_round_2019} there are numerous approaches for estimating RIRs. 
 NVIDIA is working in the field of real time ray traced audio simulation
 NVIDIA VRWorks™ Audio (introduced with the Pascal GPU architecture) 
 
@@ -300,7 +316,7 @@ NVIDIA VRWorks™ Audio (introduced with the Pascal GPU architecture)
 \subsubsection*{RIR Estimation}
 \cite{alpkocak_computing_2010} gives an overview of methods in use for RIR estimation.
 
-image sourcce method, wave based, ray tracing.
+image source method, wave based, ray tracing.
 
 
 \subsubsection*{Sphere Tracing}
@@ -312,11 +328,19 @@ Defining SDFs is an active field of research and there are several projects that
 \subsection{Motivation}
 The reasons why sphere tracing in a compute shader for RIR estimation has not been documented until now probably lie in the relatively new introduction of compute shaders as well as in the difficulty of creating SDFs(in comparison to using existing 3D /CAD models and import them to polygon based ray tracers).
 \subsubsection{Sphere tracing}
-As described above, ray tracing in general is in use. Sphere tracing has a number of advantages over ray tracing polygonal surfaces. It is "procedural" by default, since all geometry is defined by implicit surface equations. More over sphere tracing approximates cone tracing for reducing aliasing artifacts in the pixel domain\cite{hart_sphere_1996}, which in the audio domain, is considered to have advantages but is very time confusing in a non-SDF setup\cite{alpkocak_computing_2010}. The deformation and rounding of geometry is possible in a very efficient way, which might offer an opportunity to approximate low-frequency response due to diffraction artifacts. Since geometry is not defined via vertizes and edges, there is no such thing as increasing the complexity of a shape in this way. Rounding a geometrical shape is a mere subtraction as shown in FIGURE.
+As described above, ray tracing in general is in use. Sphere tracing has a number of advantages over ray tracing polygonal surfaces. It is "procedural" by default, since all geometry is defined by implicit surface equations. More over sphere tracing approximates cone tracing for reducing aliasing artifacts in the pixel domain\cite{hart_sphere_1996}, which in the audio domain, is considered to have advantages but is very time confusing in a non-SDF setup\cite{alpkocak_computing_2010}. The deformation and rounding of geometry is possible in a very efficient way, which might offer an opportunity to approximate low-frequency response due to diffraction artifacts. Since geometry is not defined via vertizes and edges, there is no such thing as increasing the complexity of a shape in this way. Rounding a geometrical shape is a mere subtraction since it just shifts the rendering to another iso-surface, which is getting increasingly smooth as shown in \ref{sdf_2d_box}. Depending on the construction of the geometry, this way, holes and cavities (such as in a diffusor) can also be made disappear for a low-frequency pass as shown in figure .
+
+\begin{figure}[ht]
+\centerline{\includegraphics[scale=0.6]{img/sdf2dbox.png}}
+\caption{\label{sdf_2d_box}{\it rounding the box given in Equation \ref{eq1} by subtraction of $0.7$.}}
+\end{figure}  
+
+
+
 procedural by default
 deforming geometry
 \subsubsection{Implementation}
-It is possible to implement the chosen algorithm on the CPU and the GPU. A number of frameworks could be chosen for GPU accelerated computation such as OpenCL or NVIDIA CUDA. The choice of a shader has the advantage of being more operating system independent and hardware independent. Compute shaders (in contrast to fragment shaders) make it possible to write to arbitrary output locations which is necessary for generating the actual impulse response from the measurement of timings. Since they are available since OpenGL 4.3 (August 2012) / OpenGL ES 3.1 they are both old enough have received broad support in other frameworks and relatively new in respect to first publications about sphere tracing. Another reason for the choice of compute shaders is their simplicity. In comparison to CUDA and OpenCL, shaders are easier to write and the GLSL(Graphics Library Shading Language) is more widespread. 
+It is possible to implement the chosen algorithm on the CPU and the GPU. A number of frameworks could be chosen for GPU accelerated computation such as OpenCL or NVIDIA CUDA. The choice of a shader has the advantage of being more operating system independent and hardware independent. Compute shaders (in contrast to fragment shaders) make it possible to write to arbitrary output locations which is necessary for generating the actual impulse response from the measurement of timings. Since they are available since OpenGL 4.3 (August 2012) / OpenGL ES 3.1 they are both aged enough to have received broad support in other frameworks and relatively new in respect to first publications about sphere tracing. Another reason for the choice of compute shaders is their simplicity. In comparison to CUDA and OpenCL, shaders are easier to write and the GLSL(Graphics Library Shading Language) is more widespread. 
 
 
 \section{Generation of SDFs}
@@ -385,7 +409,7 @@ example of a figure spanning two columns.
 
 compare to \cite{brinkmann_round_2019}
 compare to \cite{campbell_roomsim_nodate}
-
+compare to ROOMSIM
 
 \begin{figure}[ht]
 \centerline{\includegraphics[scale=0.8]{fft_plot2}}
