--- a/code/notebook/upsampleShoebox.ipynb
+++ b/code/notebook/upsampleShoebox.ipynb
@@ -123,6 +123,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wavfile.write('../touchDesigner/data/scenes/shoebox2/RIRs/wav/rir441.wav', 44100,rir4410)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
