woring on plots

--- a/code/notebook/plotGenerate.ipynb
+++ b/code/notebook/plotGenerate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,21 +15,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ir_scene3_RIR_LS1_MP1_0.npy',\n",
+       "['ir_rir441_2.npy',\n",
+       " 'ir_scene3_RIR_LS1_MP1_0.npy',\n",
+       " 'ir_rir441_1.npy',\n",
        " 'ir_scene1_RIR_Diffuse_LS1_MP1_0.npy',\n",
        " 'ir_scene1_RIR_Absorbing_LS1_MP1_0.npy',\n",
        " 'ir_scene2_RIR_1mPlate_rigid_LS1_MP1_0.npy',\n",
        " 'ir_scene2_RIR_1mPlate_rigid_LS4_MP5_0.npy',\n",
-       " 'ir_scene1_RIR_Rigid_LS1_MP1_0.npy']"
+       " 'ir_scene1_RIR_Rigid_LS1_MP1_0.npy',\n",
+       " 'ir_scene3_RIR_LS1_MP1_2.npy',\n",
+       " 'ir_rir441_3.npy',\n",
+       " 'ir_rir441_0.npy']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
