--- a/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
+++ b/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
@@ -192,3 +192,10 @@
 	year = {2003},
 	pages = {433--441}
 }
+
+@misc{lehmann_fast_2020,
+	title = {Fast simulation of acoustic room impulse responses (image-source method)},
+	url = {https://www.mathworks.com/matlabcentral/fileexchange/25965-fast-simulation-of-acoustic-room-impulse-responses-image-source-method},
+	author = {Lehmann, Eric},
+	year = {2020}
+}
