--- a/code/notebook/reflFilterSum.ipynb
+++ b/code/notebook/reflFilterSum.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,6 +29,26 @@
    ],
    "source": [
     "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ndist2(M):\n",
+    "    n = arange(M)\n",
+    "    return np.math.factorial(M)/(np.math.factorial(M-n)*np.math.factorial(M))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot(ndist2(5))"
    ]
   },
   {
