--- a/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
+++ b/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
@@ -199,3 +199,69 @@
 	author = {Lehmann, Eric},
 	year = {2020}
 }
+
+@article{aubury_binomial_1996,
+	title = {Binomial {Filters}},
+	volume = {12},
+	abstract = {. Binomial filters are simple and efficient structures based on the binomial coefficients for implementing Gaussian filtering. They do not require multipliers and can therefore be implemented efficiently in programmable hardware. There are many possible variations of the basic binomial filter structure, and they provide a wide range of space-time trade-offs; a number of these designs have been captured in a parametrised form and their features are compared. This technique can be used for multi-dimensional filtering, provided that the filter is separable. The numerical performance of binomial filters, and their implementation using field-programmable devices for an image processing application, are also discussed.  Keywords: Gaussian filters, binomial filters, parametrised design, field-programmable devices. 1. Introduction  Gaussian filtering is probably the most common form of linear filtering. To overcome the problem of choosing filter coefficients against a set of conflicting constr...},
+	journal = {Journal of VLSI Signal Processing},
+	author = {Aubury, Matthew},
+	year = {1996},
+	pages = {35--50},
+	file = {Citeseer - Snapshot:/home/patrik/Zotero/storage/KYBXHC5E/summary.html:text/html;Citeseer - Full Text PDF:/home/patrik/Zotero/storage/8HJ2UQ2V/Aubury - 1996 - Binomial Filters.pdf:application/pdf}
+}
+
+@article{derpanis_overview_nodate,
+	title = {Overview of {Binomial} {Filters}},
+	language = {en},
+	author = {Derpanis, Konstantinos G},
+	pages = {3},
+	file = {Derpanis - Overview of Binomial Filters.pdf:/home/patrik/Zotero/storage/8FRWCSZ4/Derpanis - Overview of Binomial Filters.pdf:application/pdf}
+}
+
+@article{roth_ray_1982,
+	title = {Ray casting for modeling solids},
+	volume = {18},
+	issn = {0146664X},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/0146664X82901691},
+	doi = {10.1016/0146-664X(82)90169-1},
+	language = {en},
+	number = {2},
+	urldate = {2020-02-17},
+	journal = {Computer Graphics and Image Processing},
+	author = {Roth, Scott D},
+	month = feb,
+	year = {1982},
+	pages = {109--144}
+}
+
+@article{tomczak_gpu_nodate,
+	title = {{GPU} {Ray} {Marching} of {Distance} {Fields}},
+	language = {en},
+	author = {Tomczak, Lukasz Jaroslaw},
+	pages = {79},
+	file = {Tomczak - GPU Ray Marching of Distance Fields.pdf:/home/patrik/Zotero/storage/Q75FPG2E/Tomczak - GPU Ray Marching of Distance Fields.pdf:application/pdf}
+}
+
+@inproceedings{balint_accelerating_2018,
+	title = {Accelerating {Sphere} {Tracing}},
+	doi = {10.2312/egs.20181037},
+	author = {B{\'a}lint, Csaba and Valasek, G{\'a}bor},
+	year = {2018}
+}
+
+@misc{quilez_inigo_nodate,
+	title = {Inigo {Quilez} :: fractals, computer graphics, mathematics, shaders, demoscene and more},
+	url = {https://www.iquilezles.org/www/articles/rmshadows/rmshadows.htm},
+	urldate = {2020-02-17},
+	author = {Quilez, Inigo},
+	file = {Inigo Quilez \:\: fractals, computer graphics, mathematics, shaders, demoscene and more:/home/patrik/Zotero/storage/7GX8LC26/rmshadows.html:text/html}
+}
+
+@misc{quilez_shadertoy_nodate,
+	title = {Shadertoy {BETA}},
+	url = {https://www.shadertoy.com/},
+	urldate = {2020-02-17},
+	author = {Quilez, Inigo and Jeremias, Pol},
+	file = {Shadertoy BETA:/home/patrik/Zotero/storage/GY6TRXYB/www.shadertoy.com.html:text/html}
+}
