--- a/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
+++ b/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
@@ -265,3 +265,11 @@
 	author = {Quilez, Inigo and Jeremias, Pol},
 	file = {Shadertoy BETA:/home/patrik/Zotero/storage/GY6TRXYB/www.shadertoy.com.html:text/html}
 }
+
+@misc{quilez_inigo_nodate-1,
+	title = {Inigo {Quilez} :: fractals, computer graphics, mathematics, shaders, demoscene and more},
+	url = {https://www.iquilezles.org/www/articles/juliasets3d/juliasets3d.htm},
+	urldate = {2020-02-18},
+	author = {Quilez, Inigo},
+	file = {Inigo Quilez \:\: fractals, computer graphics, mathematics, shaders, demoscene and more:/home/patrik/Zotero/storage/NMX23SIU/juliasets3d.html:text/html}
+}
