--- a/paper/DAFx20_Templates_LaTeX/img/shoebox.tex
+++ b/paper/DAFx20_Templates_LaTeX/img/shoebox.tex
@@ -4,8 +4,6 @@
 \begin{axis}[
 legend cell align={left},
 legend style={fill opacity=0.8, draw opacity=1, text opacity=1, draw=white!80.00000!black},
-minor xtick={},
-minor ytick={},
 tick align=outside,
 tick pos=left,
 x grid style={white!69.01961!black},
@@ -13,14 +11,12 @@ xlabel={time [seconds]},
 xmajorgrids,
 xmin=-0.00300, xmax=0.06298,
 xtick style={color=black},
-xtick={-0.01000,0.00000,0.01000,0.02000,0.03000,0.04000,0.05000,0.06000,0.07000},
 y grid style={white!69.01961!black},
 ymajorgrids,
 ymin=-0.94115, ymax=1.09244,
-ytick style={color=black},
-ytick={-1.00000,-0.75000,-0.50000,-0.25000,0.00000,0.25000,0.50000,0.75000,1.00000,1.25000}
+ytick style={color=black}
 ]
-\addplot [line width=1.50000pt, black]
+\addplot [semithick, black]
 table {%
 0.00000 -0.00417
 0.00002 0.00715
@@ -2670,7 +2666,7 @@ table {%
 0.05998 0.00947
 };
 \addlegendentry{Lehmann}
-\addplot [line width=1.50000pt, red, opacity=0.8]
+\addplot [semithick, red, opacity=0.8]
 table {%
 0.00000 0.00000
 0.00002 0.00000
